fixing issue , and user dupliucation problem ( still not fixed)